--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
     <div id="barra">
       <span id="menuicon"> </span>
-      <img id="logo" src="imx/logo2.png" />
+      <img id="logo" src="imx/logo2.png" alt="Logo" />
 
       <div id="menu">
         <ul id="menuli">
@@ -38,17 +38,17 @@
       <ul id="socialmenu">
         <li>
           <a href="https://github.com/JulioGaitero/"
-            ><img src="imx/github.png"
+            ><img src="imx/github.png" alt="GitHub Logo"
           /></a>
         </li>
         <li>
           <a href="https://www.linkedin.com/in/juliogaitero/"
-            ><img src="imx/linkedin.png"
+            ><img src="imx/linkedin.png" alt="linkedin logo"
           /></a>
         </li>
         <li>
           <a href="https://www.instagram.com/iriecode/"
-            ><img src="imx/instagram.png"
+            ><img src="imx/instagram.png" alt="instagram logo"
           /></a>
         </li>
       </ul>
@@ -63,7 +63,7 @@
         </div>
 
         <div id="yo">
-          <img src="imx/yo.jpg" />
+          <img src="imx/yo.jpg"  alt="yo"/>
         </div>
 
         <div id="sobremidescripcion">
@@ -153,7 +153,7 @@
         <div id="certificados">
           <div class="cer">
             <div class="logo">
-              <img src="imx/microsof.png" />
+              <img src="imx/microsof.png" alt="logo microsof"/>
             </div>
             <div class="certit">
               <h3>MICROSOFT MCTPI</h3>
@@ -162,7 +162,7 @@
           </div>
           <div class="cer">
             <div class="logo">
-              <img src="imx/microsof.png" />
+              <img src="imx/microsof.png" alt="logo microsof"/>
             </div>
             <div class="certit">
               <h3>MICROSOFT MCTPI</h3>
@@ -196,7 +196,7 @@
         <div id="conlinks">
           <div class="logolink">
             <div class="imglink">
-              <img src="imx/js.png" />
+              <img src="imx/js.png" alt="js logo"/>
             </div>
             <div class="titlink">
               <h3>JAVASCRIPT</h3>
@@ -211,7 +211,7 @@
 
           <div class="logolink">
             <div class="imglink">
-              <img src="imx/php.png" />
+              <img src="imx/php.png" alt="php logo" />
             </div>
             <div class="titlink">
               <h3>PHP</h3>
@@ -226,7 +226,7 @@
 
           <div class="logolink">
             <div class="imglink">
-              <img src="imx/web.png" />
+              <img src="imx/web.png" alt="web logo"/>
             </div>
             <div class="titlink">
               <h3>HTML + CSS</h3>
@@ -241,7 +241,7 @@
 
           <div class="logolink">
             <div class="imglink">
-              <img src="imx/java.png" />
+              <img src="imx/java.png" alt="java logo"/>
             </div>
             <div class="titlink">
               <h3>JAVA</h3>
@@ -267,19 +267,19 @@
                 también tienes acceso a mis códigos colgados en GitHub.
               </p>
               <div class="contenedor-galeria">
-                <img src="imx/work1.jpg" alt="" class="img-galeria" />
-                <img src="imx/work2.jpg" alt="" class="img-galeria" />
-                <img src="imx/work3.jpg" alt="" class="img-galeria" />
-                <img src="imx/work4.jpg" alt="" class="img-galeria" />
-                <img src="imx/work5.jpg" alt="" class="img-galeria" />
-                <img src="imx/work6.jpg" alt="" class="img-galeria" />
+                <img src="imx/work1.jpg" alt="work1" class="img-galeria" />
+                <img src="imx/work2.jpg" alt="work2" class="img-galeria" />
+                <img src="imx/work3.jpg" alt="work3" class="img-galeria" />
+                <img src="imx/work4.jpg" alt="work4" class="img-galeria" />
+                <img src="imx/work5.jpg" alt="work5" class="img-galeria" />
+                <img src="imx/work6.jpg" alt="work6" class="img-galeria" />
               </div>
             </div>
           </section>
 
           <section class="imagen-light">
             <i class="fas fa-times close"></i>
-            <img src="./img/img-3.jpg" alt="" class="agregar-imagen" />
+            <img src="./img/img-3.jpg" alt="sup" class="agregar-imagen" />
           </section>
         </div>
       </div>
