--- a/index.html
+++ b/index.html
@@ -329,11 +329,10 @@
                 <input type="submit" id="botonmail" value="Enviar" />
               </form>
               <script
-                type="text/javascript"
-                src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"
+                 src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"
               ></script>
 
-              <script type="text/javascript">
+              <script>
                 emailjs.init("QZkRTFmA3YFqO9pfW");
               </script>
             </div>
