--- a/index.html
+++ b/index.html
@@ -277,10 +277,10 @@
             </div>
           </section>
 
-          <section class="imagen-light">
+          <div class="imagen-light">
             <i class="fas fa-times close"></i>
             <img src="./img/img-3.jpg" alt="sup" class="agregar-imagen" />
-          </section>
+          </div>
         </div>
       </div>
 
