--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </div>
 
         <div id="yo">
-          <img src="imx/yo.jpg"  alt="yo"/>
+          <img src="imx/yo.jpg" alt="yo" />
         </div>
 
         <div id="sobremidescripcion">
@@ -104,17 +104,22 @@
         <div id="titulacionestitulo">
           <h2>Estas son mis titulaciones</h2>
           <p>
-            Desde que me regalaron mi primer <span class="naranja">CPC 464</span>, he tenido un pequeño
-            pasatiempo: <span class="naranja">hacer cosas que no sé hacer, pero que al final siempre
-            acabo haciendo.</span> Si trabajas como informático, sabrás muy bien de que
-            te estoy hablando. Tal vez por eso siempre que he tenido tiempo me
-            he ido formando.
+            Desde que me regalaron mi primer
+            <span class="naranja">CPC 464</span>, he tenido un pequeño
+            pasatiempo:
+            <span class="naranja"
+              >hacer cosas que no sé hacer, pero que al final siempre acabo
+              haciendo.</span
+            >
+            Si trabajas como informático, sabrás muy bien de que te estoy
+            hablando. Tal vez por eso siempre que he tenido tiempo me he ido
+            formando.
           </p>
           <p>
             Durante los dos últimos años, he dado un saltito: he empezado a
-            <span class="naranja">estudiar programación</span>. Y debo decir que está siendo toda una
-            aventura, llena de posibilidades y retos. Pero, sobre todo: <span class="naranja">¡ha sido
-            divertido!</span>
+            <span class="naranja">estudiar programación</span>. Y debo decir que
+            está siendo toda una aventura, llena de posibilidades y retos. Pero,
+            sobre todo: <span class="naranja">¡ha sido divertido!</span>
           </p>
         </div>
         <div id="titulacionesbarras">
@@ -153,7 +158,7 @@
         <div id="certificados">
           <div class="cer">
             <div class="logo">
-              <img src="imx/microsof.png" alt="logo microsof"/>
+              <img src="imx/microsof.png" alt="logo microsof" />
             </div>
             <div class="certit">
               <h3>MICROSOFT MCTPI</h3>
@@ -162,7 +167,7 @@
           </div>
           <div class="cer">
             <div class="logo">
-              <img src="imx/microsof.png" alt="logo microsof"/>
+              <img src="imx/microsof.png" alt="logo microsof" />
             </div>
             <div class="certit">
               <h3>MICROSOFT MCTPI</h3>
@@ -176,14 +181,16 @@
         <div id="contitulo">
           <h2>Un poco de codigo</h2>
           <p>
-            He subido parte de mi código a <span class="naranja">GitHub</span>, para que puedas echarle un
-            vistazo. Y es que un buen código no solo se escribe, se <span class="naranja">comparte</span>.
+            He subido parte de mi código a <span class="naranja">GitHub</span>,
+            para que puedas echarle un vistazo. Y es que un buen código no solo
+            se escribe, se <span class="naranja">comparte</span>.
           </p>
           <p>
-            Si quieres decirme lo que <span class="naranja">piensas de él, revisarlo, leerlo.</span> O tal
+            Si quieres decirme lo que
+            <span class="naranja">piensas de él, revisarlo, leerlo.</span> O tal
             vez se te ha ocurrido una solución mejor que la mía. No dudes en
-            comentármelo. Te contestaré lo mas rápidamente posible. <span class="naranja">Entre todos
-            se aprende mejor.</span>
+            comentármelo. Te contestaré lo mas rápidamente posible.
+            <span class="naranja">Entre todos se aprende mejor.</span>
           </p>
           <div id="codigo">
             <pre><span class="colorcodigo">10</span> <span class="colorcodigo2"> PRINT </span><span class="colorcodigo3">"Hola Mundo!!"</span></pre>
@@ -196,7 +203,7 @@
         <div id="conlinks">
           <div class="logolink">
             <div class="imglink">
-              <img src="imx/js.png" alt="js logo"/>
+              <img src="imx/js.png" alt="js logo" />
             </div>
             <div class="titlink">
               <h3>JAVASCRIPT</h3>
@@ -226,7 +233,7 @@
 
           <div class="logolink">
             <div class="imglink">
-              <img src="imx/web.png" alt="web logo"/>
+              <img src="imx/web.png" alt="web logo" />
             </div>
             <div class="titlink">
               <h3>HTML + CSS</h3>
@@ -241,7 +248,7 @@
 
           <div class="logolink">
             <div class="imglink">
-              <img src="imx/java.png" alt="java logo"/>
+              <img src="imx/java.png" alt="java logo" />
             </div>
             <div class="titlink">
               <h3>JAVA</h3>
@@ -256,23 +263,47 @@
         </div>
       </div>
 
-      <div id="trabajos" class="revelar">
+      <div id="trabajos" class="revelar contrabajos">
         <div id="galeriatrabajos">
           <section class="gallery" id="portafolio">
             <div class="contenedor">
               <h2 class="subtitulo">Algunos de mis trabajos</h2>
               <p>
-                Aquí puedes ver alguno de mis trabajos. Los iré <span class="naranja">actualizando</span>
-                poco a poco. Recuerda que en la sección de <span class="naranja">conocimientos</span>;
+                Aquí puedes ver alguno de mis trabajos. Los iré
+                <span class="naranja">actualizando</span> poco a poco. Recuerda
+                que en la sección de <span class="naranja">conocimientos</span>;
                 también tienes acceso a mis códigos colgados en GitHub.
               </p>
               <div class="contenedor-galeria">
-                <img src="imx/work1.jpg" alt="work1" class="img-galeria" />
-                <img src="imx/work2.jpg" alt="work2" class="img-galeria" />
-                <img src="imx/work3.jpg" alt="work3" class="img-galeria" />
-                <img src="imx/work4.jpg" alt="work4" class="img-galeria" />
-                <img src="imx/work5.jpg" alt="work5" class="img-galeria" />
-                <img src="imx/work6.jpg" alt="work6" class="img-galeria" />
+                <div  class="contenedor-img" >
+                  <img src="imx/work1.jpg" alt="work1"  class="img-galeria" />
+                  <a href="https://juliogaitero.com/work1/">Link al trabajo</a>
+                </div>
+
+                <div  class="contenedor-img" >
+                  <img src="imx/work2.jpg" alt="work2" class="img-galeria" />
+                  <a href="https://github.com/JulioGaitero/">Prueba</a>
+                </div>
+
+                <div  class="contenedor-img" >
+                  <img src="imx/work3.jpg" alt="work3" class="img-galeria" />
+                  <a href="https://github.com/JulioGaitero/">Prueba</a>
+                </div>
+
+                <div  class="contenedor-img" >
+                  <img src="imx/work4.jpg" alt="work4" class="img-galeria" />
+                  <a href="https://github.com/JulioGaitero/">Prueba</a>
+                </div>
+
+                <div  class="contenedor-img" >
+                  <img src="imx/work5.jpg" alt="work5" class="img-galeria" />
+                  <a href="https://github.com/JulioGaitero/">Prueba</a>
+                </div>
+
+                <div  class="contenedor-img" >
+                  <img src="imx/work6.jpg" alt="work6" class="img-galeria" />
+                  <a href="https://github.com/JulioGaitero/">Prueba</a>
+                </div>
               </div>
             </div>
           </section>
@@ -284,13 +315,14 @@
         </div>
       </div>
 
-      <div id="contacto" class="revelar">
+      <div id="contacto" class="contrabajos revelar">
         <div id="contecontacto">
           <div id="textoformulario">
             <h2>Cuentame algo</h2>
             <p>
-              Si quieres ponerte en contacto conmigo. No dudes en <span class="naranja">escribirme</span>.
-              Aquí tienes el formulario de contacto. Te <span class="naranja">contestaré</span> lo antes
+              Si quieres ponerte en contacto conmigo. No dudes en
+              <span class="naranja">escribirme</span>. Aquí tienes el formulario
+              de contacto. Te <span class="naranja">contestaré</span> lo antes
               posible. O si lo prefieres, también puedes hablar conmigo a través
               de mis <span class="naranja">redes sociales</span>.
             </p>
@@ -328,9 +360,7 @@
 
                 <input type="submit" id="botonmail" value="Enviar" />
               </form>
-              <script
-                 src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"
-              ></script>
+              <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
 
               <script>
                 emailjs.init("QZkRTFmA3YFqO9pfW");
