--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
 
                 <div  class="contenedor-img" >
                   <img src="imx/work2.jpg" alt="work2" class="img-galeria" />
-                  <a href="https://github.com/JulioGaitero/">Prueba</a>
+                  <a href="https://juliogaitero.com/work2/">Link al trabajo</a>
                 </div>
 
                 <div  class="contenedor-img" >
