--- a/index.html
+++ b/index.html
@@ -277,22 +277,25 @@
               <div class="contenedor-galeria">
                 <div  class="contenedor-img" >
                   <img src="imx/work1.jpg" alt="work1"  class="img-galeria" />
+                  <h4>Perfil Social</h4>
                   <a href="https://juliogaitero.com/work1/">Link al trabajo</a>
                 </div>
 
                 <div  class="contenedor-img" >
-                  <img src="imx/work2.jpg" alt="work2" class="img-galeria" />
-                  <a href="https://juliogaitero.com/work2/">Link al trabajo</a>
-                </div>
-
-                <div  class="contenedor-img" >
                   <img src="imx/work3.jpg" alt="work3" class="img-galeria" />
-                  <a href="https://github.com/JulioGaitero/">Prueba</a>
+                  <h4>Página Empresa Eléctrica</h4>
+                  <a href="https://github.com/work3/">Link al trabajo</a>
                 </div>
 
                 <div  class="contenedor-img" >
                   <img src="imx/work4.jpg" alt="work4" class="img-galeria" />
                   <a href="https://github.com/JulioGaitero/">Prueba</a>
+                </div>
+
+                <div  class="contenedor-img" >
+                  <img src="imx/work2.jpg" alt="work2" class="img-galeria" />
+                  <h4>Generador Contraseñas</h4>
+                  <a href="https://juliogaitero.com/work2/">Link al trabajo</a>
                 </div>
 
                 <div  class="contenedor-img" >
