--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                 <div  class="contenedor-img" >
                   <img src="imx/work3.jpg" alt="work3" class="img-galeria" />
                   <h4>Página Empresa Eléctrica</h4>
-                  <a href="https://github.com/work3/">Link al trabajo</a>
+                  <a href="https://juliogaitero.com/work3/">Link al trabajo</a>
                 </div>
 
                 <div  class="contenedor-img" >
