--- a/index.html
+++ b/index.html
@@ -289,7 +289,8 @@
 
                 <div  class="contenedor-img" >
                   <img src="imx/work4.jpg" alt="work4" class="img-galeria" />
-                  <a href="https://github.com/JulioGaitero/">Prueba</a>
+                  <h4>Página Inicio Dinámica</h4>
+                  <a href="https://juliogaitero.com/work4">Link al trabajo</a>
                 </div>
 
                 <div  class="contenedor-img" >
