--- a/index.html
+++ b/index.html
@@ -301,7 +301,8 @@
 
                 <div  class="contenedor-img" >
                   <img src="imx/work5.jpg" alt="work5" class="img-galeria" />
-                  <a href="https://github.com/JulioGaitero/">Prueba</a>
+                  <h4>Interface APP Hotel</h4>
+                  <a href="https://juliogaitero.com/work5/">Link al trabajo</a>
                 </div>
 
                 <div  class="contenedor-img" >
