--- a/index.html
+++ b/index.html
@@ -307,7 +307,8 @@
 
                 <div  class="contenedor-img" >
                   <img src="imx/work6.jpg" alt="work6" class="img-galeria" />
-                  <a href="https://github.com/JulioGaitero/">Prueba</a>
+                  <h4>Curso Alta Cocina</h4>
+                  <a href="https://juliogaitero.com/work6/">Link al trabajo</a>
                 </div>
               </div>
             </div>
