--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
           <li><a class="link" href="#sobremi">SOBRE MI </a></li>
           <li><a class="link" href="#titulaciones">TITULACIONES</a></li>
           <li><a class="link" href="#conocimientos">CONOCIMIENTOS</a></li>
+          <li><a class="link" href="#experiencia">EXPERIENCIA</a></li>
           <li><a class="link" href="#trabajos">TRABAJOS</a></li>
           <li><a class="link" href="#contacto">CONTACTO</a></li>
         </ul>
@@ -84,7 +85,7 @@
 
           <p>
             Y la verdad que no me ha ido tan mal. Dos años después, solo me
-            queda entregar el proyecto y acabar mis prácticas en empresa.
+            queda por conocer la nota del Proyecto Final de Desarrollo .
           </p>
 
           <p>
@@ -248,6 +249,21 @@
 
           <div class="logolink">
             <div class="imglink">
+              <img src="imx/bc.png" alt="web logo" />
+            </div>
+            <div class="titlink">
+              <h3>BC 365</h3>
+              <h4>
+                <a
+                  href="https://github.com/JulioGaitero/MisCodigos/tree/master/Microsoft%20Business%20Central"
+                  >Link a github</a
+                >
+              </h4>
+            </div>
+          </div>
+
+          <div class="logolink">
+            <div class="imglink">
               <img src="imx/java.png" alt="java logo" />
             </div>
             <div class="titlink">
@@ -261,6 +277,29 @@
             </div>
           </div>
         </div>
+      </div>
+
+      <div id="experiencia_div" class="revelar">
+        <div id="contenido_experiencia">
+        <h2 class="subtitulo">Mi experiencia laboral como programador</h2>
+        <p>Como ya os comenté durante la pandemia, decidí cambiar la radial por el teclado. Y me he dado doy cuenta de que, al entrar aquí, 
+          lo que probablemente te interesarará es conocer <span class="naranja">mi experiencia como programador</span>, por lo que he decidido no incluir mis anteriores 
+          trabajos como peón. Sin embargo, si deseas conocer mi <span class="naranja"></span>experiencia laboral completa</span>, puedes descargar mi <span class="naranja">currículum vitae</span> haciendo click <a class="naranja" href="cv.pdf">aquí</a>.</p>
+
+          <ul>
+            <li class="naranja"><h4>Diseñador web</h4></li>
+            <p class="nombre_empresa">Yoyo Comunicación</p>
+            <p class="fecha_empresa">feb 2007 - ago 2007 · 6 meses.</p>
+            <p class="tarea_empresa">Durante medio año, colaboré para la empresa <span class="naranja">Yoyo Comunicación</span>, donde desarrollaba <span class="naranja">temas en WordPress</span>. Participé, por ejemplo, en el desarrollo de la página web de la agencia, 
+              o en el diseño y puesta en marcha de la página <span class="naranja">30 días en bici.</span></p>
+            <li class="naranja"><h4>Programador Junior MS Dynamics NAV - Navision</h4></li>
+            <p class="nombre_empresa">LIDER IT Consulting</p>
+            <p class="fecha_empresa">oct 2022 - dic 2022 · 3 meses.</p>
+            <p class="tarea_empresa">Durante mis 3 meses de <span class="naranja">FCT</span>, tuve la oportunidad de adquirir habilidades en
+              programación de <span class="naranja">Microsoft Dynamics Navision y Microsoft Business Central (C/SIDE y AL)</span>, mientras colaboraba con los
+              programadores en tareas de <span class="naranja">implementación, soporte y migración entre versiones.</span></p>
+          </ul>
+      </div>
       </div>
 
       <div id="trabajos" class="revelar contrabajos">
