--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <ul id="menuli">
           <li><a class="link" href="#sobremi">SOBRE MI </a></li>
           <li><a class="link" href="#titulaciones">TITULACIONES</a></li>
+           <li><a class="link" href="#certificaciones">CERTIFICACIONES</a></li>
           <li><a class="link" href="#conocimientos">CONOCIMIENTOS</a></li>
           <li><a class="link" href="#experiencia">EXPERIENCIA</a></li>
           <li><a class="link" href="#trabajos">TRABAJOS</a></li>
@@ -84,8 +85,9 @@
           </p>
 
           <p>
-            Y la verdad que no me ha ido tan mal. Dos años después, solo me
-            queda por conocer la nota del Proyecto Final de Desarrollo .
+            Actualmente, me encuentro en la búsqueda de mi <span class="naranja">primer trabajo como programador</span>. 
+            Aunque soy consciente de que la falta de experiencia puede ser una desventaja,
+             estoy seguro de que puedo compensarla con mi gran <span class="naranja">entusiasmo</span> y <span class="naranja">pasión</span> por la programación.
           </p>
 
           <p>
@@ -176,6 +178,26 @@
             </div>
           </div>
         </div>
+      </div>
+
+      <div id="certificaciones" class="revelar">
+        <div id="certi_izquierda">
+          <h2>Mis cursos terminados</h2>
+          <p>
+            Siempre he pensado que <span class="naranja">el aprendizaje</span> no puede tener un final, siempre hay algo nuevo por descubrir. 
+            Y aunque ya haya terminado mis estudios, siempre estoy haciendo <span class="naranja">cursos y formándome.</span></p>
+            <p>Me encanta repasar <span class="naranja">conceptos, aprender cosas nuevas </span> estar al tanto de las 
+            últimas tendencias. <span class="naranja">Aun tengo muchas cosas que aprender.</span> 
+            Si echas un vistazo a tu derecha, podrás ver los certificados que he ido sacando.
+            </p>
+        </div>
+        <div id="certi_derecha">
+          <ul>
+        <li>Introducción a la programación - <span class="naranja">OpenBootCamp</span></li>
+        <li>Java Básico - <span class="naranja">OpenBootCamp</span></li>
+        <li>SQL - <span class="naranja">OpenBootCamp</span></li>
+      </ul>
+      </div>
       </div>
 
       <div id="conocimientos" class="revelar">
