--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </div>
 
         <div id="yo">
-          <img src="imx/yo.jpg" alt="yo" />
+          <img src="imx/yo.png" alt="yo" />
         </div>
 
         <div id="sobremidescripcion">
