Cambiados los trabajos

--- a/trabajos.html
+++ b/trabajos.html
@@ -41,6 +41,18 @@
           </p>
         </div>
         <div id="listado_trabajos">
+          <div class="trabajo" id="trabajo8">
+            <a href="https://jgaitero.000webhostapp.com/"> 
+              <div id="video_presentacion"><img src="imx/camera.svg" alt="link" /><h3>Video Presentación</h3></div></a>
+            <a href="https://jgaitero.000webhostapp.com/"
+              ><div id="pie_trabajo">
+                <h3><img src="imx/link.svg" alt="link" />Tare UP</h3>
+                <div class="pie_trabajo_tecnologias">
+                  <p>PHP | HTML | CSS | JS</p>
+                </div>
+              </div></a
+            >
+          </div>
           <div class="trabajo" id="trabajo1">
             <a href="trabajos/work1/index.html"
               ><div id="pie_trabajo">
