Cambiado el pie

--- a/experiencia.html
+++ b/experiencia.html
@@ -20,7 +20,7 @@
           <ul>
             <li><a href="index.html">Sobre Mi</a></li>
             <li><a href="estudios.html">Titulaciones</a></li>
-            <li><a href="experiencia.html">Experiencia</a></li>
+            <li><a class="azul" href="experiencia.html">Experiencia</a></li>
             <li><a href="codigo.html">Codigo</a></li>
             <li><a href="trabajos.html">Trabajos</a></li>
             <li><a href="contacto.html">Contacto</a></li>
@@ -85,20 +85,16 @@
       </div>
 
       <div id="pie">
+        <div id="logo">
+          <h4 class="naranja">© 2024. Julio Gaitero</h4>
+        </div>
         <div id="redes_sociales">
           <ul>
-            <li><a href="https://github.com/JulioGaitero/">Github</a></li>
-            <li>
-              <a href="https://www.linkedin.com/in/juliogaitero/">Linkedin</a>
-            </li>
-            <li><a href="https://www.instagram.com/iriecode/">Instagram</a></li>
-            <li><a href="contacto.html">Contacto</a></li>
+            <li><a href="https://github.com/JulioGaitero"><img src="imx/rrss/git.svg"></a></li>
+            <li><a href="https://www.linkedin.com/in/juliogaitero/"><img src="imx/rrss/linkedin.svg"></a></li>
+            <li><a href="https://www.instagram.com/iriecode/"><img src="imx/rrss/insta.svg"></a></li>
+            <li><a href="contacto.html"><img src="imx/rrss/mail.svg"></a></li>
           </ul>
-        </div>
-        <div id="logo">
-          <a href="juliogaitero.com"
-            ><h1><img src="imx/logo.png" alt="Logo" /></h1
-          ></a>
         </div>
       </div>
     </div>
