--- a/trabajos.html
+++ b/trabajos.html
@@ -133,20 +133,16 @@
       </div>
 
       <div id="pie">
+        <div id="logo">
+          <h4 class="naranja">© 2024. Julio Gaitero</h4>
+        </div>
         <div id="redes_sociales">
           <ul>
-            <li><a href="https://github.com/JulioGaitero/">Github</a></li>
-            <li>
-              <a href="https://www.linkedin.com/in/juliogaitero/">Linkedin</a>
-            </li>
-            <li><a href="https://www.instagram.com/iriecode/">Instagram</a></li>
-            <li><a href="contacto.html">Contacto</a></li>
+            <li><a href="https://github.com/JulioGaitero"><img src="imx/rrss/git.svg"></a></li>
+            <li><a href="https://www.linkedin.com/in/juliogaitero/"><img src="imx/rrss/linkedin.svg"></a></li>
+            <li><a href="https://www.instagram.com/iriecode/"><img src="imx/rrss/insta.svg"></a></li>
+            <li><a href="contacto.html"><img src="imx/rrss/mail.svg"></a></li>
           </ul>
-        </div>
-        <div id="logo">
-          <a href="juliogaitero.com"
-            ><h1><img src="imx/logo.png" alt="Logo" /></h1
-          ></a>
         </div>
       </div>
     </div>
