--- a/experiencia.html
+++ b/experiencia.html
@@ -26,7 +26,11 @@
             <li><a href="contacto.html">Contacto</a></li>
           </ul>
         </div>
-        <span id="menuicon"> </span>
+        <div class="menuicon" onclick="toggleMenu()">
+          <div class="bar1"></div>
+          <div class="bar2"></div>
+          <div class="bar3"></div>
+        </div>
       </div>
 
       <div id="contenido_estudios">
