--- a/trabajos.html
+++ b/trabajos.html
@@ -22,11 +22,15 @@
             <li><a href="estudios.html">Titulaciones</a></li>
             <li><a href="experiencia.html">Experiencia</a></li>
             <li><a href="codigo.html">Codigo</a></li>
-            <li><a href="trabajos.html">Trabajos</a></li>
+            <li><a class="azul" href="trabajos.html">Trabajos</a></li>
             <li><a href="contacto.html">Contacto</a></li>
           </ul>
         </div>
-        <span id="menuicon"> </span>
+        <div class="menuicon" onclick="toggleMenu()">
+          <div class="bar1"></div>
+          <div class="bar2"></div>
+          <div class="bar3"></div>
+        </div>
       </div>
 
       <div id="contenido_estudios">
